# active-exploration

./: .gitignore  .gitmodules  README.md  environment.yml
data_generation/: create_dataset.py  tonemap.py  utils.py  variable_renderer.py
docs/: variations.md
ext/mitsuba2/: .gitignore  mitsuba.conf
ext/mitsuba2/ext/: CMakeLists.txt
ext/mitsuba2/ext/asmjit/: CMakeLists.txt  CxxProject.cmake
ext/mitsuba2/ext/libjpeg/: CMakeLists.txt
ext/mitsuba2/ext/libpng/: CMakeLists.txt
ext/mitsuba2/ext/openexr/: CMakeLists.txt
ext/mitsuba2/ext/openexr/IlmBase/Iex/: CMakeLists.txt
ext/mitsuba2/ext/openexr/IlmBase/IexMath/: CMakeLists.txt
ext/mitsuba2/ext/openexr/IlmBase/IlmThread/: CMakeLists.txt
ext/mitsuba2/ext/openexr/IlmBase/Imath/: CMakeLists.txt
ext/mitsuba2/ext/openexr/OpenEXR/: CMakeLists.txt
ext/mitsuba2/ext/openexr/OpenEXR/IlmImf/: CMakeLists.txt
ext/mitsuba2/resources/data/: .gitignore
ext/mitsuba2/src/bsdfs/: diffuse.cpp  plastic.cpp  roughconductor.cpp  roughdielectric.cpp  roughplastic.cpp  twosided.cpp
ext/mitsuba2/src/emitters/: point.cpp
ext/mitsuba2/src/integrators/: CMakeLists.txt  aov.cpp  aov_bounce.cpp
ext/mitsuba2/src/libcore/: bitmap.cpp  properties.cpp  xml.cpp
ext/mitsuba2/src/librender/: bsdf.cpp  emitter.cpp  endpoint.cpp  integrator.cpp  scene.cpp  scene_optix.inl  sensor.cpp  shape.cpp  shapegroup.cpp
ext/mitsuba2/src/shapes/: instance.cpp
ext/pytorch_ssim/: __init__.py
neural_rendering/: data.py  losses.py  utils.py
neural_rendering/generators/: pixel_generator.py  positional_pixel_generator.py
neural_rendering/preview/: preview_widget_buffers.py  preview_widget_varying.py
neural_rendering/samplers/: mcmc_sampler.py
neural_rendering/train/: train_dynamic_markov_reuse.py
scenes/bathroom/: preview.xml  preview_buffers.xml  scene.xml
scenes/bedroom/: preview.xml  preview_buffers.xml  scene.xml
scenes/bedroom/textures/: skydome.exr
scenes/living-room/: preview.xml  preview_buffers.xml  scene.xml
scenes/spaceship/: preview.xml  preview_buffers.xml  scene.xml
scenes/sphere-caustic/: preview.xml  preview_buffers.xml  scene.xml
scenes/veach-ajar/: preview.xml  preview_buffers.xml  scene.xml
scenes/veach-egg/: preview.xml  preview_buffers.xml  scene.xml
(+318 files in other folders)
